# Auth

./: .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.test  README.md  db_config.py  docker-compose.test.yml  docker-compose.yaml  pyproject.toml  settings.py
.github/workflows/: codacy.yml  docker_test_workflow.yml  linting.yaml
API/: auth.py
Model/: user.py
Tests/: test_auth.py  test_token.py
Token/: token.py
