[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
firebase-admin = "^6.2.0"
redis = "^5.0.1"
slowapi = "^0.1.8"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
tortoise-orm = "^0.20.0"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
